syntax = "proto3";

package grpc;

message UserSignupDtoRequest {
	  string id = 1;
    string userName = 2;
    string email = 3;
    string password = 4;
}

message UserSignupResponse {
    string greeting = 1;
}

message DeleteRequest {
  string token = 1;
}

message DeleteResponse {
  string user = 1;
}

service UserSignupService {
  rpc signup(UserSignupDtoRequest) returns (UserSignupResponse);
  rpc deleteUser(DeleteRequest) returns (DeleteResponse);
}
